--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ build/
 #application.properties file
 
 src/main/resources/application.properties
+
+notes.txt
+
+src\test\java\com\scm20\ApplicationTests.java
